# chinese-worker

./: .env.example  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CONTEXT.md  MEMORY.md  QUEUE_BUG.md  README.md  TODO.md  boost.json  components.json  compose.yaml  composer.json  huggingface-backend-plan.md  package-lock.json  package.json  updated_compose.yaml  vite.config.ts  vllm-enhancement-plan.md
cw-cli/: README.md  pyproject.toml  requirements.txt  test_tools.py
cw-cli/chinese_worker/: cli.py
cw-cli/chinese_worker/api/: __init__.py  auth.py  client.py  sse_client.py
cw-cli/chinese_worker/commands/: __init__.py  agents.py  backends.py  conversations.py  docs.py  files.py  prompts.py  tools.py
cw-cli/chinese_worker/tools/: base.py  bash.py  systemctl.py  write.py
cw-cli/chinese_worker/tui/: __init__.py  app.py
cw-cli/chinese_worker/tui/handlers/: __init__.py  command_handler.py  commands.py  sse_handler.py  stream.py  tool_handler.py  tools.py
cw-cli/chinese_worker/tui/screens/: __init__.py  agent_select.py  chat.py  conversations.py  document_detail.py  documents.py  home.py  login.py  upload_modal.py  welcome.py
cw-cli/chinese_worker/tui/styles/: app.tcss  chat.tcss  conversations.tcss  documents.tcss  home.tcss  login.tcss  theme.tcss
cw-cli/chinese_worker/tui/utils/: __init__.py  time.py
cw-cli/chinese_worker/tui/widgets/: __init__.py  conversation_item.py  conversation_sidebar.py  document_item.py  input_area.py  message.py  message_list.py  processing_pipeline.py  status_badge.py  (+5 more)
cw-cli/tests/: conftest.py
cw-cli/tests/tui/: conftest.py
(+1010 files in other folders)
