[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chinese-worker"
version = "0.1.0"
description = "CLI tool for Chinese Worker - AI agent execution platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
    "prompt_toolkit>=3.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
]

[project.scripts]
cw = "chinese_worker.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]
